# -ARCHIVED-MetaNetwork

./: Cargo.toml  README.md
.github/workflows/: main.yml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/actions/: Cargo.toml
pallets/actions/src/: lib.rs
pallets/meta/: Cargo.toml
pallets/meta/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: Dockerfile
