[package]
authors = ["Tirtadwipa Manunggal <tirtad@dcentric.health>"]
description = "ARIA ecosystem actions"
edition = "2021"
homepage = "https://substrate.io/"
license = "Unlicense"
name = "pallet-actions"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
version = "0.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
  "derive",
]}
frame-benchmarking = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest", optional = true}
frame-support = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"}
frame-system = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}

[dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "devhub/latest"
version = "4.0.0-dev"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git"
tag = "devhub/latest"
version = "4.0.0-dev"

[dependencies.serde]
version = "1.0.129"

[dev-dependencies]
sp-core = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"}
sp-io = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"}
sp-runtime = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"}

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking/std",
  "sp-std/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
